# tinyraytracer-rs

./: .gitignore  Cargo.toml  README.md  index.html
benches/: bench.rs
pkg/: ray_rs.d.ts  ray_rs.js  ray_rs_bg.wasm  ray_rs_bg.wasm.d.ts
src/: geometry.rs  lib.rs  main.rs  march.rs  noise.rs  render.rs  sphere.rs
