[package]
name = "ray-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-traits = "0.2.15"
rayon = "1.5.3"

[dev-dependencies]
criterion = "0.3.6"

[[bench]]
name = "bench"
harness = false

[profile.release]
lto = true
codegen-units = 1
debug = true
