[package]
name = "ray-rs"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
num-traits = "0.2.15"
wasm-bindgen = "0.2.82"

[dev-dependencies]
criterion = "0.3.6"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'Document',
  'Element',
  'HtmlElement',
  'Node',
  'Window',
  'ImageData',
  'CanvasRenderingContext2d',
]

[[bench]]
name = "bench"
harness = false

[profile.release]
lto = true
codegen-units = 1
debug = true
